Revision history for {{$dist->name}}

{{$NEXT}}

0.01006912 2010-07-24 08:56:10 Pacific/Auckland

        Bumping CompileTests and Git depends.
        Adding CommitBuild behaviour.
        Tidied Docs up a little.

0.01002610 2010-06-12 06:44:05 Pacific/Auckland
        Dropped "Repository" in favour of "GithubMeta"
        Use MetaData::BuiltWith.
        Bumped Test::EOL.

0.01002504 2010-06-11 00:10:51 Pacific/Auckland

        Added Dist::Zilla::Plugin::Author::KENTNL::DistINI.
        Now I can just 'dzil new Module-Name' and start hacking =).

0.01002419 2010-06-10 15:38:51 Pacific/Auckland
        Add Test::EOL dependencies.
        This release tests my hacks to Dist::Zilla in the eol department.

0.01002321 2010-06-09 17:13:23 Pacific/Auckland

        Add hard deps on Net::SSLeay and
          IO::Socket::SSL. Net::Twitter does not work
          without these, and they work when force-installed on 
          win32.
        This release is also intending to test my patched version
          of Dist::Zilla.

0.01002309 2010-06-09 05:47:53 Pacific/Auckland

        Upgrade to DZIL 4. 
        Upgrade deps on ReadmeFromPod ( win32 )
        Add report-versions. 
        Replace Kwalitee Tests with Plugin.
        Add portability tests
        Dep on other requirements for tests.
        fix @inc for Dzil 4.
        add 'notwitter' flag.

0.01001714 2010-06-03 10:11:42 Pacific/Auckland

        A little better documentation. Nobody else
        should care, but I'm likely to forget what my own code does.

        More of my fail. Tweaking so I can 
        KENTNL_TWITTER_ONLY=1 dzil release 
        and get a dumb no-git no-cpan twitter release.

0.01001713 2010-06-03 09:04:31 Pacific/Auckland

        Re-attempted release of 0.01001712 
        except with a (hopefully) working .netrc so 
        the twitter thing Actually Works(TM).

0.01001712 2010-06-03 08:54:05 Pacific/Auckland

        Added Dist::Zilla::Plugin::Twitter to the chain.
