@@ -23,7 +23,8 @@ Dist::Zilla::Plugin::AutoVersion::Relative = 0.01006104
 Dist::Zilla = 4.101612
 Dist::Zilla::Plugin::GithubMeta = 0.08
 Dist::Zilla::Plugin::PodWeaver = 3.093321
-Dist::Zilla::Plugin::MetaProvides = 1.10027518
+Dist::Zilla::Plugin::MetaProvides = 1.11
+Dist::Zilla::Plugin::MetaProvides::Package = 1.11
 Dist::Zilla::Plugin::ReadmeFromPod = 0.12
 Dist::Zilla::Plugin::CompileTests = 1.101800
 Dist::Zilla::Plugin::Git = 1.102040
@@ -38,7 +39,7 @@ Net::SSLeay             = 1.36
 IO::Socket::SSL         = 0
 Pod::Coverage::TrustPod = 0
 Test::CPAN::Meta        = 0
-MooseX::Has::Sugar = 0.0405
+MooseX::Has::Sugar = 0.05
 Moose = 1.01
 namespace::autoclean = 0.09
 MooseX::Types = 0.21
