@@ -1,5 +1,7 @@
 use strict;
 use warnings;
+use Test::More;
 
-use Test::Perl::Critic( -profile => 'perlcriticrc' );
+eval "use Test::Perl::Critic( -profile => 'perlcriticrc' );";
+plan skip_all => "Test::Perl::Critic required for testing Against Policy" if $@;
 all_critic_ok();
